# Image_Capture

./: CMakeLists.txt  README.md  hw_config.c  main.c  main_analysis.c
image-graph/: main_test_images.m  test_seule_images_3_bandes_2023_03_22.m
image-graph/codegen/lib/test_seule_images_3_bandes_2023_03_22/: codedescriptor.dmr  rtwtypes.h  test_seule_images_3_bandes_2023_03_22.cpp  test_seule_images_3_bandes_2023_03_22.h  test_seule_images_3_bandes_2023_03_22_data.cpp  test_seule_images_3_bandes_2023_03_22_data.h  test_seule_images_3_bandes_2023_03_22_initialize.cpp  test_seule_images_3_bandes_2023_03_22_initialize.h  test_seule_images_3_bandes_2023_03_22_rtw.bat  test_seule_images_3_bandes_2023_03_22_rtw.mk  test_seule_images_3_bandes_2023_03_22_terminate.cpp  test_seule_images_3_bandes_2023_03_22_terminate.h  test_seule_images_3_bandes_2023_03_22_types.h
image-graph/codegen/lib/test_seule_images_3_bandes_2023_03_22/examples/: main.cpp  main.h
image-graph/codegen/lib/test_seule_images_3_bandes_2023_03_22/html/: report.mldatx
image-graph/codegen/lib/test_seule_images_3_bandes_2023_03_22/interface/: _coder_test_seule_images_3_bandes_2023_03_22_api.cpp  _coder_test_seule_images_3_bandes_2023_03_22_api.h  _coder_test_seule_images_3_bandes_2023_03_22_mex.cpp  _coder_test_seule_images_3_bandes_2023_03_22_mex.h
tests/: README.md
tests/File_system/no-OS-FatFS-SD-SPI-RPi-Pico-sdio/examples/simple/: thing_plus.hw_config.c
tests/File_system/no-OS-FatFS-SD-SPI-RPi-Pico-sdio/src/sd_driver/SPI/: sd_card_spi.c
tests/mains/: README.md  main_bin.c  main_randomcolors.c  main_txt.c  mainrev.c
